fix: changed content and some CSS

--- a/sito-web-laboratorio/html_pages/areacommerciale.html
+++ b/sito-web-laboratorio/html_pages/areacommerciale.html
@@ -95,25 +95,25 @@
           <img src="../assets/its-logo.png" alt="logo_espositore_1" />
         </div>
         <div class="espositore">
-          <img src="../assets/hp-logo.png" alt="logo_espositore_2" />
+          <img src="../assets/torinologo.png" alt="logo_espositore_2" />
         </div>
         <div class="espositore">
-          <img src="../assets/visa-logo.png" alt="logo_espositore_3" />
+          <img src="../assets/regionepiemonte.png" alt="logo_espositore_3" />
         </div>
         <div class="espositore">
-          <img src="../assets/Pepsi-Logo.png" alt="logo_espositore_4" />
+          <img src="../assets/intesasanpaolo.png" alt="logo_espositore_4" />
         </div>
         <div class="espositore">
-          <img src="../assets/amazon-logo.png" alt="logo_espositore_5" />
+          <img src="../assets/SanBenedetto.png" alt="logo_espositore_5" />
         </div>
         <div class="espositore">
-          <img src="../assets/unieuro-logo.png" alt="logo_espositore_6" />
+          <img src="../assets/igdalogo.png" alt="logo_espositore_6" />
         </div>
         <div class="espositore">
-          <img src="../assets/Unity-Logo.png" alt="logo_espositore_7" />
+          <img src="../assets/dramaticiceberglogo.png" alt="logo_espositore_7" />
         </div>
         <div class="espositore">
-          <img src="../assets/de-logo.png" alt="logo_espositore_8" />
+          <img src="../assets/goblinlogo.png" alt="logo_espositore_8" />
         </div>
       </div>
 
