--- a/sito-web-laboratorio/html_pages/conference.html
+++ b/sito-web-laboratorio/html_pages/conference.html
@@ -69,54 +69,42 @@
           <div class="schedule-day">
             <h2>30 OTTOBRE</h2>
             <div class="conference-card">
-              <div class="time">10:00 - 11:30</div>
+              <div class="time">11:30 - 12:30</div>
               <h3>Il Futuro del Game Development</h3>
               <p>
-                Ubisoft Milano presenta le nuove frontiere dello sviluppo
-                videoludico
+                IGDA presenta le nuove frontiere dello sviluppo
+                videoludico e le opportunità per gli sviluppatori emergenti
               </p>
-              <div class="speaker">Marco Rossi - Lead Developer</div>
+              <div class="speaker">Suzanne Freyjadis - IGDA Director of Global Development</div>
             </div>
             <div class="conference-card">
-              <div class="time">14:00 - 15:30</div>
+              <div class="time">14:00 - 15:00</div>
               <h3>Unity vs Unreal: Scegli il Tuo Destino</h3>
               <p>
                 Confronto tra i due engine più popolari per lo sviluppo di
-                videogiochi
+                videogiochi, con l'esperienza del Team di Dramatic Iceberg
+                e le loro opinioni. 
               </p>
-              <div class="speaker">Laura Bianchi - Game Engine Specialist</div>
+              <div class="speaker">Gabriele Gallo - Dramatic Iceberg Producer, 
+                Leonardo Assom, Emma Nosengo & Luca Pavesi - Dramatic Iceberg 3D Art</div>
             </div>
           </div>
 
           <div class="schedule-day">
             <h2>31 OTTOBRE</h2>
             <div class="conference-card">
-              <div class="time">11:00 - 12:30</div>
-              <h3>Horror Game Development</h3>
-              <p>Tecniche di sviluppo per creare atmosfere terrificanti</p>
-              <div class="speaker">Alessandro Verdi - Horror Game Designer</div>
+              <div class="time">11:00 - 12:00</div>
+              <h3>Indie Games: Storie di Sviluppo</h3>
+              <p>Dal garage al successo: storie di sviluppatori indipendenti, dal PC
+                alla Realtà Aumentata, dalla Realtà Aumentata alla Realtà Virtuale.
+              </p>
+              <div class="speaker">Level Up Lab - Studio Sviluppatori Politecnico</div>
             </div>
             <div class="conference-card">
-              <div class="time">16:00 - 17:30</div>
-              <h3>AI nel Gaming</h3>
-              <p>L'intelligenza artificiale nel futuro dei videogiochi</p>
-              <div class="speaker">Sofia Neri - AI Developer</div>
-            </div>
-          </div>
-
-          <div class="schedule-day">
-            <h2>1 NOVEMBRE</h2>
-            <div class="conference-card">
-              <div class="time">10:30 - 12:00</div>
+              <div class="time">16:30 - 17:30</div>
               <h3>Carriera nel Game Development</h3>
               <p>Opportunità e percorsi nel mondo dello sviluppo videoludico</p>
-              <div class="speaker">Roberto Marini - HR Gaming Industry</div>
-            </div>
-            <div class="conference-card">
-              <div class="time">15:00 - 16:30</div>
-              <h3>Indie Game Success Stories</h3>
-              <p>Dal garage al successo: storie di sviluppatori indipendenti</p>
-              <div class="speaker">Giulia Ferraris - Indie Developer</div>
+              <div class="speaker">Marta Daglow - Daglow Consulting Group</div>
             </div>
           </div>
         </div>
@@ -132,10 +120,8 @@
               <option value="">Seleziona la conferenza</option>
               <option>Il Futuro del Game Development</option>
               <option>Unity vs Unreal: Scegli il Tuo Destino</option>
-              <option>Horror Game Development</option>
-              <option>AI nel Gaming</option>
+              <option>Indie Games: Storie di Sviluppo</option>
               <option>Carriera nel Game Development</option>
-              <option>Indie Game Success Stories</option>
             </select>
             <button type="submit" class="submit-btn">PRENOTA ORA</button>
           </form>
