--- a/sito-web-laboratorio/html_pages/cosplay.html
+++ b/sito-web-laboratorio/html_pages/cosplay.html
@@ -60,23 +60,23 @@
             <div class="timeline">
                 <div class="timeline-event">
                     <h3>Ore 10:00 - Apertura Registrazioni Cosplay</h3>
-                    <p>Inizio smistamento dei partecipanti e preparazione costumi</p>
+                    <p>Inizio smistamento dei partecipanti e preparazione costumi, nella sezione dedicata dell'evento.</p>
                 </div>
                 <div class="timeline-event">
-                    <h3>Ore 13:00 - Workshop di Creazione Costumi</h3>
-                    <p>Esperti guideranno i partecipanti nella realizzazione di accessori e dettagli</p>
+                    <h3>Ore 13:30 - Workshop di Creazione Costumi</h3>
+                    <p>Esperti guideranno i partecipanti nella realizzazione di accessori, dettagli e ultimi ritocchi.</p>
                 </div>
                 <div class="timeline-event">
                     <h3>Ore 16:00 - Sfilata Cosplay</h3>
-                    <p>Momento clou dell'evento: presentazione dei migliori costumi</p>
+                    <p>Momento clou dell'evento: presentazione dei migliori costumi!</p>
                 </div>
                 <div class="timeline-event">
-                    <h3>Ore 19:00 - Premiazioni</h3>
-                    <p>Riconoscimenti per creatività, fedeltà al personaggio e originalità</p>
+                    <h3>Dalle 18:00 alle 20:00 - Premiazioni</h3>
+                    <p>Riconoscimenti per creatività, fedeltà al personaggio e originalità.</p>
                 </div>
                 <div class="timeline-event">
-                    <h3>Ore 21:00 - Ballo di Chiusura Cosplay</h3>
-                    <p>Festa finale con musica e divertimento in costume con la Realtà Virtuale</p>
+                    <h3>Ore 21:00 - Ballo di Chiusura Evento Cosplay</h3>
+                    <p>Festa finale con musica e divertimento in costume.</p>
                 </div>
             </div>
             <a href="#" class="download-programma">Scarica Programma PDF</a>
@@ -86,26 +86,22 @@
             <p class="cosplay-content">
                 Benvenuti nel regno del divertimento, dell'inclusività e della passione 
                 creativa! Il Torino GamesCon rappresenta un punto di riferimento 
-                nazionale per il mondo del cosplay e della tecnologia, offrendo 
-                una piattaforma prestigiosa che celebra l'arte del travestimento e 
-                della performance. 
+                per il mondo del cosplay e della tecnologia, offrendo una piattaforma 
+                prestigiosa che celebra l'arte del travestimento e della performance. 
                 
-                <p class="cosplay-content">Ogni anno, oltre 300 appassionati convergono sul 
+                <p class="cosplay-content">Molti appassionati convergono sul 
                 nostro palcoscenico, dando vita a un'esperienza unica che va ben oltre 
-                il semplice costume. In collaborazione con l'associazione Cospa Family,
+                il semplice costume. In collaborazione con l'associazione italiana Cospa Family,
                 organizziamo contest articolati che valutano l'eccellenza in molteplici 
                 categorie: dal miglior costume maschile e femminile, al miglior gruppo, 
                 fino alle categorie speciali che premiano l'interpretazione e la 
                 creatività degli accessori.
 
                 <p class="cosplay-content">
-                Una giuria di esperti nazionali e internazionali esamina con rigore 
-                ogni performance, valutando non solo l'abilità artigianale nella 
+                Una giuria di esperti esamina con rigore ogni performance, 
+                valutando non solo l'abilità artigianale nella 
                 realizzazione del costume, ma anche la capacità di immedesimarsi nel 
                 personaggio, le doti interpretative e il carisma sul palco. 
-                Momenti culminanti dell'evento includono workshop tematici, emozionanti 
-                sessioni di Karaoke e Karacosplay, dove i partecipanti dimostrano le 
-                loro doti vocali e di caratterizzazione. 
                 <p class="cosplay-content">
                     In uno spirito che unisce Halloween e la passione per il cosplay, 
                 invitiamo appassionati di ogni età e background a trasformarsi, 
@@ -137,15 +133,15 @@
             <div class="stand-list">
                 <div class="stand">
                     <h2>NegozioMask</h2>
-                    <p>Vendita di costumi professionali e accessori per cosplay</p>
+                    <p>Sezione di vendita di costumi professionali e accessori per cosplay</p>
                 </div>
                 <div class="stand">
                     <h2>CreaCosplay</h2>
-                    <p>Workshop per imparare a creare il proprio costume da zero</p>
+                    <p>Sezione di workshop per imparare a creare il proprio costume da zero</p>
                 </div>
                 <div class="stand">
                     <h2>PropsLab</h2>
-                    <p>Laboratorio di creazione di accessori e armi finte per cosplay</p>
+                    <p>Sezione di laboratorio di creazione di accessori e armi finte per cosplay</p>
                 </div>
             </div>
         </section>
