--- a/sito-web-laboratorio/html_pages/formazione_dev.html
+++ b/sito-web-laboratorio/html_pages/formazione_dev.html
@@ -63,38 +63,39 @@
         <h1>Programma Formazione</h1>
         <div class="timeline">
           <div class="timeline-event">
-            <h3>Ore 10:00 - Workshop Pratici</h3>
+            <h3>Dalle 10:00 alle 11:30 - Workshop Pratici</h3>
             <p>
               Scopri i principali strumenti per creare videogiochi, come Unity e
-              Unreal Engine, e impara le basi del game design e della
-              programmazione.
+              Unreal Engine, e comincia a prendere confidenza con il game design 
+              e la programmazione.
             </p>
           </div>
           <div class="timeline-event">
-            <h3>Ore 12:00 - Seminari con Esperti:</h3>
+            <h3>Dalle 11:30 alle 15:00 - Conferenza IGDA, Dramatic Iceberg & LevelUp</h3>
             <p>
-              Professionisti del settore condivideranno consigli e case study su
-              come entrare nel mondo dello sviluppo di videogiochi.
+              Professionisti provenienti dal settore o dal Politecnico di Torino,
+              condivideranno consigli e case study su come entrare nel mondo 
+              dello sviluppo di videogiochi.
             </p>
           </div>
           <div class="timeline-event">
-            <h3>Ore 14:00 - Mini Game Jam:</h3>
+            <h3>Dalle 15:30 alle 17:00 - Mini Game Jam</h3>
             <p>
-              Mettiti alla prova con altri partecipanti sviluppando un piccolo
-              videogioco a tema Halloween.
+              Crea un piccolo gruppo e comincia a buttare giù idee con altri partecipanti 
+              sviluppando un piccolo incipit di videogioco a tema Halloween.
             </p>
           </div>
           <div class="timeline-event">
-            <h3>Ore 16:00 - Laboratori Creativi:</h3>
+            <h3>Dalle 17:30 alle 21:00 - Laboratori Creativi:</h3>
             <p>
               Approfondisci aspetti come il Level Design, la grafica 3D e
-              l’ottimizzazione per il gaming competitivo.
+              i principi della Realtà Aumentata e Virtuale.
             </p>
           </div>
           <div class="timeline-event">
             <h3>Perché Partecipare?</h3>
             <p>
-              Avrai l’opportunità di imparare dai migliori, sviluppare nuove
+              Avrai l’opportunità di imparare da coloro che son già nel settore, sviluppare nuove
               competenze e confrontarti con altri appassionati. Scopri come
               trasformare la tua passione per i videogiochi in una professione.
               Non perdere l’occasione di immergerti nel mondo dello sviluppo
