--- a/sito-web-laboratorio/html_pages/games.html
+++ b/sito-web-laboratorio/html_pages/games.html
@@ -69,7 +69,7 @@
           <h2>GIOCO IN EVIDENZA</h2>
           <div class="featured-content">
             <div class="game-info">
-              <h3>Racoonie: Legends of the Spirits</h3>
+              <h3>Racoonie: Legend of the Spirits</h3>
               <p class="studio">by Dramatic Iceberg</p>
               <p class="description">
                 Un’allegra avventura su di un procione magico alla ricerca dei
@@ -78,7 +78,7 @@
               <div class="game-details">
                 <div class="detail">Genere: Avventura, Puzzles</div>
                 <div class="detail">Piattaforme: PC</div>
-                <div class="detail">Release: 2024</div>
+                <div class="detail">Release: In Arrivo</div>
               </div>
             </div>
             <div class="game-preview">
@@ -88,7 +88,7 @@
                 class="game-image"
               />
               <div class="image-overlay">
-                <div class="overlay-text">Racoonie: Legends of the Spirits</div>
+                <div class="overlay-text">Racoonie: Legend of the Spirits</div>
               </div>
             </div>
           </div>
@@ -133,21 +133,21 @@
         <h2>PROGRAMMA INCONTRI</h2>
         <div class="schedule-grid">
           <div class="schedule-item">
-            <div class="time">11:00 - 12:30</div>
+            <div class="time">11:30 - 12:30</div>
             <div class="event-info">
               <h3>Presentazione IGDA</h3>
               <p>Scopri le opportunità per gli sviluppatori emergenti</p>
             </div>
           </div>
           <div class="schedule-item">
-            <div class="time">14:00 - 15:30</div>
+            <div class="time">15:00 - 16:30</div>
             <div class="event-info">
               <h3>Demo Racoonie</h3>
               <p>Prova in anteprima il nuovo titolo di Dramatic Iceberg</p>
             </div>
           </div>
           <div class="schedule-item">
-            <div class="time">16:00 - 17:30</div>
+            <div class="time">17:00 - 18:30</div>
             <div class="event-info">
               <h3>Meet & Greet</h3>
               <p>Incontra il team di sviluppo di Dramatic Iceberg</p>
@@ -164,9 +164,9 @@
             <input type="email" placeholder="Email" required />
             <select required>
               <option value="">Seleziona l'orario</option>
-              <option>14:00 - 14:30</option>
-              <option>14:30 - 15:00</option>
               <option>15:00 - 15:30</option>
+              <option>15:30 - 16:00</option>
+              <option>16:00 - 16:30</option>
             </select>
             <button type="submit" class="submit-btn">PRENOTA SESSIONE</button>
           </form>
