--- a/sito-web-laboratorio/html_pages/videogames.html
+++ b/sito-web-laboratorio/html_pages/videogames.html
@@ -70,7 +70,7 @@
         <p>Entra nel terrore con un'esperienza horror immersiva. Affronta zombie e misteri in prima persona.</p>
       </div>
       <div class="activity-card">
-        <h2>Sparatutto 1V1</h2>
+        <h2>Sparatutto 1 VS 1</h2>
         <p>Metti alla prova i tuoi riflessi con emozionanti sfide uno contro uno.</p>
       </div>
         <p></p>
@@ -81,10 +81,14 @@
     <div class="activity-container">
   <div class="activity-card">
     <h2>Beat Saber</h2>
-    <p>Un gioco ritmico frenetico: taglia i blocchi al ritmo della musica!</p>
+    <p>Immergiti in un mondo futuristico e lascia che il ritmo ti guidi. 
+      Taglia blocchi al suono della musica e sfida i tuoi riflessi. 
+      Riuscirai a battere il punteggio più alto?</p>
   </div>
   <div class="activity-card">
     <h2>Escape Room</h2>
+    <p>Un’oscura biblioteca cela un antico segreto. 
+      Avete 60 minuti per decifrare enigmi e scoprire la via d’uscita prima che la maledizione si scateni.</p>
   </div>
 </section>
   
@@ -116,7 +120,7 @@
       </div>
       <div class="activity-card">
         <h2>Deadlands</h2>
-        <p>Un gioco di ruolo che mescola western e horror soprannaturale. Esplora il selvaggio West infestato da mostri e spiriti malvagi.</p>
+        <p>Deadlands è un gioco di ruolo che fonde il Far West con il soprannaturale, creando un mondo dove la magia, i mostri e il vapore convivono. I giocatori vestono i panni di pistoleri, sciamani o inventori folli, affrontando misteri e orrori in un West oscuro e pericoloso.</p>
       </div>
   </div>
 </section>
