--- a/sito-web-laboratorio/html_pages/areacommerciale.html
+++ b/sito-web-laboratorio/html_pages/areacommerciale.html
@@ -58,8 +58,12 @@
       <h1>Area Commerciale Torino GamesCon</h1>
 
       <div class="bottoni-principali">
-        <a href="#espositori" class="btn btn-scopri">Scopri gli Espositori</a>
-        <a href="#prenota" class="btn btn-prenota">Prenota il tuo Stand</a>
+        <a href="work_in_progress.html" class="btn btn-scopri"
+          >Scopri gli Espositori</a
+        >
+        <a href="work_in_progress.html" class="btn btn-prenota"
+          >Prenota il tuo Stand</a
+        >
       </div>
 
       <div class="descrizione-area">
@@ -110,7 +114,10 @@
           <img src="../assets/igdalogo.png" alt="logo_espositore_6" />
         </div>
         <div class="espositore">
-          <img src="../assets/dramaticiceberglogo.png" alt="logo_espositore_7" />
+          <img
+            src="../assets/dramaticiceberglogo.png"
+            alt="logo_espositore_7"
+          />
         </div>
         <div class="espositore">
           <img src="../assets/goblinlogo.png" alt="logo_espositore_8" />
@@ -123,7 +130,7 @@
           Sei un'azienda o un creatore interessato a far parte del nostro
           universo?
         </p>
-        <a href="#" class="btn-contatta">Contattaci QUI</a>
+        <a href="contatti.html" class="btn-contatta">Contattaci QUI</a>
       </div>
     </div>
     <footer>
