--- a/sito-web-laboratorio/html_pages/work_in_progress.html
+++ b/sito-web-laboratorio/html_pages/work_in_progress.html
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Contatti</title>
-    <link rel="stylesheet" href="../styles/contatti_styles.css" />
+    <title>GamesCon Event</title>
+    <link rel="stylesheet" href="../styles/work_in_progress.css" />
     <link rel="stylesheet" href="../styles/bottombar_styles.css" />
     <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link rel="stylesheet" href="../styles/theme_style.css" />
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="../assets/icon_gamescon.png" />
   </head>
   <body>
     <header>
@@ -49,7 +50,7 @@
             </div>
           </li>
           <li class="dropdown">
-            <a href="#social">Contatti </a>
+            <a href="#social">Contatti</a>
             <div class="dropdown-content">
               <a href="contatti.html">Contatti</a>
             </div>
@@ -57,55 +58,29 @@
         </ul>
       </nav>
     </header>
-    <link rel="icon" href="../assets/icon_gamescon.png" />
-
-    <div id="general-container" style="display: flex; gap: 20px; margin: 20px">
-      <div id="image-container" style="flex: 1">
-        <img
-          src="../assets/Pennywise_Cosplay_1.jpg"
-          alt="Mappa evento"
-          style="width: 100%; border-radius: 10px"
-        />
-      </div>
-
-      <div id="content-container" style="flex: 2">
-        <section>
-          <h1 class="main-title">
-            <span class="title"
-              >Vieni a trovarci alla splendida Palazzina di Caccia di
-              Stupinigi.</span
-            >
-          </h1>
-          <h1 class="email">E-Mail: gamescontorino@gmail.com</h1>
-          <p>
-            GamesCon Torino vi aspetta dal
-            <span class="date">30 al 31 ottobre 2027</span> alla Palazzina di
-            Caccia Di Stupinigi!
-          </p>
-        </section>
-      </div>
-    </div>
-
+    <main>
+      <h1>WORK IN PROGRESS ....</h1>
+    </main>
     <footer>
       <li class="dropdown">
         <div>
-          <a href="#facebook" target="_blank">
-            <img class="social" src="../assets/icon_facebook.svg" />
-          </a>
+          <a href="#facebook" target="_blank"
+            ><img class="social" src="../assets/icon_facebook.svg"
+          /></a>
           <a
             href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
             target="_blank"
-          >
-            <img class="social" src="../assets/icon_instagram.svg" />
-          </a>
+            ><img class="social" src="../assets/icon_instagram.svg"
+          /></a>
           <a
             href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
             target="_blank"
-          >
-            <img class="social" src="../assets/icon_tiktok.svg" />
+            ><img class="social" src="../assets/icon_tiktok.svg" />
           </a>
         </div>
       </li>
     </footer>
+    <script src="../scripts/home_script.js"></script>
+    <script src="../scripts/navbar_scripts.js"></script>
   </body>
 </html>
