--- a/sito-web-laboratorio/html_pages/conference.html
+++ b/sito-web-laboratorio/html_pages/conference.html
@@ -7,10 +7,11 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>GamesCon - Conferenze</title>
-    <link rel="stylesheet" href="../styles/conference_styles.css" />
-    <link rel="stylesheet" href="../styles/bottombar_styles.css" />
-    <link rel="stylesheet" href="../styles/navbar_style.css" />
+    <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/theme_style.css" />
+    <link rel="stylesheet" href="../styles/navbar_style.css" />
+    <link rel="stylesheet" href="../styles/bottombar_styles.css" />
+    <link rel="stylesheet" href="../styles/conference_styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
