--- a/sito-web-laboratorio/welcome.html
+++ b/sito-web-laboratorio/welcome.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spooky Animation</title>
     <link rel="stylesheet" href="welcome_css.css" />
+    <link rel="icon" href="assets/icon_gamescon.png" />
   </head>
   <body>
     <div class="container">
@@ -17,7 +18,7 @@
       </div>
       <div class="button-container">
         <a href="html_pages/home.html" class="animated-button"
-          >Enter if you dare!</a
+          >Entra se hai coraggio!</a
         >
       </div>
     </div>
