--- a/sito-web-laboratorio/html_pages/areacommerciale.html
+++ b/sito-web-laboratorio/html_pages/areacommerciale.html
@@ -3,53 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <title>Area Commerciale - Torino GamesCon</title>
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/theme_style.css" />
+    <link rel="stylesheet" href="../styles/navbar_style.css" />
+    <link rel="stylesheet" href="../styles/bottombar_styles.css" />
+    <link rel="icon" href="../assets/icon_gamescon.png" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles/areacommerciale_styles.css" />
-    <link rel="stylesheet" href="../styles/bottombar_styles.css" />
-    <link rel="stylesheet" href="../styles/navbar_style.css" />
-    <link rel="stylesheet" href="../styles/theme_style.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li class="dropdown">
-            <a href="#">Home</a>
+            <input type="checkbox" id="dropdown-1" />
+            <label for="dropdown-1">Home</label>
             <div class="dropdown-content">
               <a href="home.html">Home</a>
             </div>
           </li>
           <li class="dropdown">
-            <a href="#info">Info</a>
+            <input type="checkbox" id="dropdown-2" />
+            <label for="dropdown-2">Info</label>
             <div class="dropdown-content">
               <a href="comeArrivare.html">Come arrivare</a>
             </div>
           </li>
           <li class="dropdown">
-            <a href="#aree">Aree</a>
-            <div class="dropdown-content">
-              <a href="games.html">Games</a>
-              <a href="cosplay.html">Cosplay</a>
-              <a href="conference.html">Conference</a>
-              <a href="areacommerciale.html">Area Commerciale</a>
-            </div>
-          </li>
-          <li class="dropdown">
-            <a href="#attivita">Attività</a>
-            <div class="dropdown-content">
-              <a href="./formazione_dev.html">Formazione Developers</a>
-              <a href="videogames.html">Videogames & Tabletop</a>
-            </div>
-          </li>
-          <li class="dropdown">
-            <a href="#social">Contatti</a>
-            <div class="dropdown-content">
-              <a href="contatti.html">Contatti</a>
-            </div>
-          </li>
+              <input type="checkbox" id="dropdown-aree" />
+              <label for="dropdown-aree">Aree</label>
+              <div class="dropdown-content">
+                <a href="games.html">Games</a>
+                <a href="cosplay.html">Cosplay</a>
+                <a href="conference.html">Conference</a>
+                <a href="areacommerciale.html">Area Commerciale</a>
+              </div>
+            </li>
+            <li class="dropdown">
+              <input type="checkbox" id="dropdown-attivita" />
+              <label for="dropdown-attivita">Attività</label>
+              <div class="dropdown-content">
+                <a href="./formazione_dev.html">Formazione Developers</a>
+                <a href="videogames.html">Videogames & Tabletop</a>
+              </div>
+            </li>
+            <li class="dropdown">
+              <input type="checkbox" id="dropdown-contatti" />
+              <label for="dropdown-contatti">Contatti</label>
+              <div class="dropdown-content">
+                <a href="contatti.html">Contatti</a>
+              </div>
+            </li>
         </ul>
       </nav>
     </header>
